# lesson-10-rag-api-homework

./: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
app/: auth.py  cache.py  circuit_breaker.py  concurrency.py  config.py  cost.py  db.py  embeddings.py  llm.py  llm_stream.py  main.py  observability.py  pricing.py  prompts.py  rag.py  rate_limit.py  security.py  state.py
data/: source.md
scripts/: debug_search.py  index.py  init_db.sql  smoke.sh
